--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "google-spreadsheet": "^2.0.6",
+    "googleapis": "^27.0.0",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.1",
     "react-native-navigation": "1.1.491",
     "react-native-vector-icons": "6.0.2",
     "react-redux": "5.0.7",
-    "redux": "4.0.1"
+    "redux": "4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.1.2",
