--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,12 +148,17 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-google-signin')
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation 'com.android.support:design:27.1.0'
     implementation "com.facebook.react:react-native:+"  // From node_modules
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile project(':react-native-vector-icons')
     compile project(':react-native-navigation')
+    implementation(project(":react-native-google-signin")){
+        exclude group: "com.google.android.gms" // very important
+    }
+    implementation 'com.google.android.gms:play-services-auth:15.0.0'
 }
 
 // Run this once to be able to run the application with BUCK
@@ -168,3 +173,4 @@ project.ext.vectoricons = [
 ]
 
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+// apply plugin: 'com.google.gms.google-services' 
