--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "bundle-android": "node node_modules/react-native/local-cli/cli.js bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/"
   },
   "dependencies": {
-    "google-spreadsheet": "^2.0.6",
-    "googleapis": "^27.0.0",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.1",
+    "react-native-google-signin": "^1.0.0-rc7",
     "react-native-navigation": "1.1.491",
     "react-native-vector-icons": "6.0.2",
     "react-redux": "5.0.7",
