--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.1",
+    "react-native-datepicker": "^1.7.2",
     "react-native-google-signin": "^1.0.0-rc7",
     "react-native-navigation": "1.1.491",
     "react-native-vector-icons": "6.0.2",
